Added minor http test and debuglog+JWTauth fix

--- a/ApiGateway/Properties/launchSettings.json
+++ b/ApiGateway/Properties/launchSettings.json
@@ -6,7 +6,8 @@
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
-            "applicationUrl": "https://localhost:54315;http://localhost:54316"
+            "applicationUrl": "https://localhost:54311;http://localhost:54313",
+            "launchUrl": "gateway/swagger"
         }
     }
 }
