--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -4,5 +4,11 @@
             "Default": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "JWT": {
+        "Secret": "8fLxpECXIvZ3s7bT4JlKqGnM0wRuYdAe6F9P2OcQhDiU5WaNjVzByH1o",
+        "Issuer": "MicroservicesApiGateway",
+        "Audience": "AuthorizedClients",
+        "ExpireMinutes": 60
+    }
 }
